feat: add ticket response logic and declaring routes
