# app/Models/Response.php
@@ -3,11 +3,19 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\BelongsTo;
 
 class response extends Model
 {
-    public function user()
+    protected $fillable = ['ticket_id', 'user_id', 'message'];
+
+    public function ticket(): BelongsTo
     {
-        return $this->hasOne(User::class);
+        return $this->belongsTo(Ticket::class);
+    }
+
+    public function user(): BelongsTo
+    {
+        return $this->belongsTo(User::class);
     }
 }
